# bevy_collaspe

./: Cargo.toml  readme.md
examples/: breakout.rs
src/: ascii.rs  assets.rs  camera_controller.rs  cleanup.rs  enviroment.rs  fadeout.rs  main.rs  math.rs  overlay.rs  overworld.rs  start_menu.rs  sudoku.rs  tiles.rs  ui.rs  wave.rs
src/physics/: colliders.rs  mod.rs
src/states/: breakout.rs  mod.rs  overworld.rs  start_menu.rs  sudoku.rs  tetris.rs
src/systems/: ascii.rs  camera_controller.rs  enviroment.rs  fadeout.rs  mod.rs  overlay.rs
