[package]
name = "bevy_collaspe"
version = "0.1.0"
edition = "2021"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

#Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] } #{ git = "https://github.com/bevyengine/bevy", branch = "main" }

bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls", branch = "main" }
bevy_mod_picking = "0.6"
bevy-inspector-egui = "0.10.0"
bevy_asset_loader = "0.10.0"
bevy_hanabi = { version = "0.2" }
bevy_tweening = "0.4"
itertools = "0.10.2"
rand = "0.8.5"

